--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -20,10 +20,10 @@ foo:
 
 # main links
 main:
-  - title: "Quick-Start Guide"
-    url: /docs/quick-start-guide/
   - title: "About"
     url: /about/
+  - title: "Data engineer"
+    url: /dataengineer/
   - title: "Sample Posts"
     url: /year-archive/
   - title: "Sample Collections"
