--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -34,10 +34,10 @@ main:
 
 # documentation links
 docs:
-  - title: Getting Started
+  - title: About
     children:
-      - title: "Quick-Start Guide"
-        url: /docs/quick-start-guide/
+      - title: "About"
+        url: /pages/about/
       - title: "Structure"
         url: /docs/structure/
       - title: "Installation"
